--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
